--- a/Html/ZenZone_Geschenkmanden.html
+++ b/Html/ZenZone_Geschenkmanden.html
@@ -76,7 +76,7 @@
               <div class="row mt-5">
                 <div class="col-lg-4 col-md-6">
                   <!-- Start van de kaart waarin een carousell staat  -->
-                  <div class="card w-75 mb-3 ms-5">
+                  <div class="card w-75 mb-3 ms-5 card-body border border-4 rounded-3 mandenPage">
                     <div id="carouselChill&Unwind" class="carousel slide">
                       <div class="carousel-inner">
                         <div class="carousel-item active">
@@ -105,7 +105,7 @@
                 <div class="col-lg-8 col-md-6 ms-md-0 ms-5">
                   <div class="row">
                     <div class="col-lg-6">
-                      <h4 class="mandenPage">Chill & Unwind</h4>
+                      <h4>Chill & Unwind</h4>
                     </div>
                     <div class="col-lg-6">
                       <h4 class="mandenPage">Prijs: €25,00</h4>
@@ -141,7 +141,7 @@
               <div class="row mt-5">
                 <div class="col-lg-4 col-md-6">
                   <!-- Start van de kaart waarin een carousell staat  -->
-                  <div class="card w-75 mb-3 ms-5">
+                  <div class="card w-75 mb-3 ms-5 card-body border border-4 rounded-3 mandenPage">
                     <div id="carouselStuddyBuddy" class="carousel slide">
                       <div class="carousel-inner">
                         <div class="carousel-item active">
@@ -208,24 +208,7 @@
               <div class="row mt-5">
                 <div class="col-lg-4 col-md-6 mb-2">
                   <div class="card w-75 mb-3 ms-5">
-                      <div id="carouselSport" class="carousel slide">
-                        <div class="carousel-inner">
-                          <div class="carousel-item active">
-                              <img src="../Images/Sport.jpg" class="d-block w-100" alt="Afbeelding van de snack attack items">
-                          </div>
-                          <div class="carousel-item">
-                            <img src="../Images/Sport (1).jpg" class="d-block w-100" alt="Afbeelding van de snack attack mand">
-                          </div>
-                        </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselSport" data-bs-slide="prev">
-                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                          <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselSport" data-bs-slide="next">
-                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                          <span class="visually-hidden">Next</span>
-                        </button>
-                      </div>
+                    <img src="../Images/Sport.jpg" class="card-img-top h-100" style="height: 50vh" alt="afbeelding van de items in de sport mand">
                     <div class="card-body">
                       <p class="card-text">Sport mand items</p>
                     </div>
@@ -271,7 +254,7 @@
               <div class="row mt-5">
                 <div class="col-lg-4 col-md-6">
                   <!-- Start van de kaart waarin een carousell staat  -->
-                  <div class="card w-75 mb-3 ms-5">
+                  <div class="card w-75 mb-3 ms-5 card-body border border-4 rounded-3 mandenPage">
                     <div id="carouselSnackAttack" class="carousel slide">
                       <div class="carousel-inner">
                         <div class="carousel-item active">
@@ -334,25 +317,8 @@
               <div class="row mt-5">
                 <div class="col-lg-4 col-md-6">
                   <!-- Start van de kaart -->
-                  <div class="card w-75 mb-3 ms-5">
-                      <div id="carouselSnackAttackGluten&LactoseVrij" class="carousel slide">
-                        <div class="carousel-inner">
-                          <div class="carousel-item active">
-                              <img src="../Images/SnackAttack(Gluten en lactosevrij).jpg" class="d-block w-100" alt="Afbeelding van de snack attack items">
-                          </div>
-                          <div class="carousel-item">
-                            <img src="../Images/SnackAttack(Gluten en lactosevrij) (1).jpg" class="d-block w-100" alt="Afbeelding van de snack attack mand">
-                          </div>
-                        </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselSnackAttackGluten&LactoseVrij" data-bs-slide="prev">
-                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                          <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselSnackAttackGluten&LactoseVrij" data-bs-slide="next">
-                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                          <span class="visually-hidden">Next</span>
-                        </button>
-                      </div>
+                  <div class="card w-75 mb-3 ms-5 card-body border border-4 rounded-3 mandenPage">
+                    <img src="../Images/SnackAttack(Gluten en lactosevrij).jpg" class="card-img-top h-100" style="height: 50vh" alt="afbeelding van de items in de Snack attack mand">
                     <div class="card-body">
                       <p class="card-text">Snack attack (gluten en lactosevrij) mand items</p>
                     </div>
